--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "chart.js": "^4.4.8",
     "firebase": "^11.7.1",
+    "html2pdf.js": "^0.10.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
